--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "navbar.js",
   "scripts": {
     "start": "node src/server.js",
-    "server" :"nodemon src/server"
+    "server": "nodemon src/server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^12.0.4",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "multer": "^1.4.4",
     "redis": "^4.0.2"
