--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^12.0.4",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.6",
